# skills_extraction

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHAPTER_Skills_Extraction_Pipeline_and_Auditability.md  CLAUDE.md  FUTURE_LLM_Distillation_Plan.md  MIGRATION_FROM_NLP_REPO.md  README.md  Runskills_extraction.py  analyze_log.py  analyze_stage1.py  archive_old_runs.py  check_status.sh  clone_stage1_checkpoint.py  compare_runs.py  deploy.bat  deploy.ps1  deploy.sh  full_run.sh  launch.sh  prompts_updated.py  pyproject.toml  qwen3_nonthinking.jinja  requirements.txt  resumeMistral.sh  script_part1.b64  show_job.py  startMistral  startMistral.sh  startQwen  startQwen.sh  stopModel  test_fixes.py  test_payload.py  test_simple.py  test_vllm.sh  vLLM_run.sh
.claude/: settings.local.json
full_run_output/checkpoints/: full_10k_20260327_185602_stage2_verified.jsonl
skills_extraction/: CHANGELOG.md  README.md  __init__.py  __main__.py  boilerplate.py  candidate_mining.py  checkpoint.py  cli.py  confidence.py  config.py  example_augmented_job_fragment.json  exporters.py  io_utils.py  job_title_skills.py  llm_backend.py  llm_extractor.py  llm_hardsoft_classifier.py  llm_ollama.py  llm_openrouter.py  llm_requirement_classifier.py  llm_verifier.py  llm_vllm.py  ontology.py  pipeline.py  preprocessing.py  prompts.py  prompts_backup_20260413.py  quality.py  run_stats.py  schemas.py  sectioning.py
